[package]
name = "dsarc"
version = "0.1.0"
authors = ["Ruin0x11 <ipickering2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
nom-trace = "0.2.1"
serde = "1.0.117"
serde_derive = "1.0.117"
encoding_rs = "0.8.24"
byteorder = "1.3.4"
anyhow = "1.0"
clap = "2.33"
